--- a/DocumentEditing/DocumentEditing.DAL.Migratons/DocumentEditing.DAL.Migratons.csproj
+++ b/DocumentEditing/DocumentEditing.DAL.Migratons/DocumentEditing.DAL.Migratons.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DocumentEditing.DAL.Contracts\DocumentEditing.DAL.Contracts.csproj" />
+    <ProjectReference Include="..\DocumentEditing.DAL.Implementations\DocumentEditing.DAL.Implementations.csproj" />
   </ItemGroup>
 
 </Project>
