--- a/DocumentEditing/DocumentEditing.Domain.Contracts/DocumentEditing.Domain.Contracts.csproj
+++ b/DocumentEditing/DocumentEditing.Domain.Contracts/DocumentEditing.Domain.Contracts.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentEditing.DAL.Contracts\DocumentEditing.DAL.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
