--- a/DocumentEditing/DocumentEditing.Web/DocumentEditing.Web.csproj
+++ b/DocumentEditing/DocumentEditing.Web/DocumentEditing.Web.csproj
@@ -1,7 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentEditing.DAL.Implementations\DocumentEditing.DAL.Implementations.csproj" />
+    <ProjectReference Include="..\DocumentEditing.Domain.Contracts\DocumentEditing.Domain.Contracts.csproj" />
+    <ProjectReference Include="..\DocumentEditing.Domain.Implementations\DocumentEditing.Domain.Implementations.csproj" />
+  </ItemGroup>
 
 </Project>
