--- a/DocumentEditing/DocumentEditing.Web/DocumentEditing.Web.csproj
+++ b/DocumentEditing/DocumentEditing.Web/DocumentEditing.Web.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\DocumentEditing.Domain.Implementations\DocumentEditing.Domain.Implementations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\UserFiles\" />
+  </ItemGroup>
+
 </Project>
